Fixing issue with tests not running during Gradle build

--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,2 +1,3 @@
 cucumber.plugin=pretty, html:example-console/cucumberHtmlReport/report.html
 cucumber.junit-platform.naming-strategy=long
+cucumber.features=src/test/resources/features/
